apply plugin: 'com.android.application'
apply plugin: 'realm-android'
apply plugin: 'com.mikepenz.aboutlibraries.plugin'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.ivor.coatex"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 31
        versionName "3.0.0"
        vectorDrawables.useSupportLibrary = true
        multiDexEnabled true
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            def flavor = variant.name
            def versionName = variant.versionName
            outputFileName = "Coatex_${flavor}_${versionName}_${versionCode}.apk"
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    externalNativeBuild {
        cmake {
            path file('cpp/CMakeLists.txt')
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/ASL2.0'
        exclude("META-INF/*.kotlin_module")
    }
}

//configurations.all {
//    resolutionStrategy {
//        force 'com.android.support:support-v4:27.1.1'
//    }
//}

dependencies {
    //implementation fileTree(dir: 'libs', include: ['*.jar'])

    // implementation files('libs/core-1.52.0.0.jar')
    // implementation files('libs/prov-1.52.0.0.jar')
    //compile fileTree(dir: 'libs', include: ['*.jar'])
    // https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.codec
    implementation 'org.apache.directory.studio:org.apache.commons.codec:1.8'
    // https://mvnrepository.com/artifact/com.madgag.spongycastle/core
    implementation 'com.madgag.spongycastle:core:1.58.0.0'
    // https://mvnrepository.com/artifact/com.madgag.spongycastle/prov
    implementation 'com.madgag.spongycastle:prov:1.58.0.0'
    // https://mvnrepository.com/artifact/org.apache.pulsar/pulsar-client-messagecrypto-bc
    implementation 'org.apache.pulsar:pulsar-client-messagecrypto-bc:2.10.0'

    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
    implementation 'org.bouncycastle:bcprov-ext-jdk15to18:1.70'
    // compile group: 'org.bouncycastle', name: '', version: ''

    // https://mvnrepository.com/artifact/net.i2p.crypto/eddsa
    implementation 'net.i2p.crypto:eddsa:0.3.0'

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.fragment:fragment:1.2.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'jp.wasabeef:glide-transformations:4.1.0'
    implementation 'cn.dreamtobe.filedownloader:filedownloader-okhttp3-connection:1.1.0'
    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
    implementation 'com.liulishuo.filedownloader:library:1.7.7'
    implementation 'commons-codec:commons-codec:1.11'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'io.realm:android-adapters:3.1.0'
    implementation 'com.devlomi.record-view:record-view:2.0.1'
    implementation 'com.4ert:audioview:1.4.12'
    implementation 'com.github.abdularis:androidbuttonprogress:1.0.2'
    implementation 'com.adityak:browsemyfiles:1.9'
    implementation 'com.github.MasayukiSuda:Mp4Composer-android:v0.3.9'
    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.1'
    implementation 'com.jarvanmo:exoplayerview:2.1.5'
    implementation 'com.novoda:merlin:1.2.1'
    implementation "com.mikepenz:aboutlibraries:8.1.1"

    implementation 'com.google.zxing:core:3.2.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"

    testImplementation 'junit:junit:4.12'
    // implementation 'com.android.support:appcompat-v7:23.0.1'
    // implementation 'com.android.support:design:23.0.1'
    // implementation 'com.android.support:recyclerview-v7:23.0.1'
    // implementation 'com.android.support:cardview-v7:23.0.1'
}
